# CppTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  CppTemplate.sln  CppTemplate.vcxproj  CppTemplate.vcxproj.filters  README.md
assets/: convert.bat  default.frag.glsl  default.vert.glsl  grass_texture.ktx
assets/gltf/cube/ktx/: Cube_BaseColor.png.ktx  Cube_MetallicRoughness.png.ktx
assets/shaders/: default.vert.glsl  hdr_mapping.frag.glsl  hdr_mapping.vert.glsl  pbr.frag.glsl  pbr.vert.glsl
include/: gltf.h  mesh.hpp  program.h  program.hpp  resources.hpp  shader.hpp  state.h  utility.h  utility.hpp
include/glad/: glad.h
include/resources/: gltf_scene.h  material.h  mesh.h  resources.h  shader.h  texture.h
src/: glad.c  gltf.cpp  main.cpp  mesh.cpp  program.cpp  resources.cpp  shader.cpp  state.cpp
src/resources/: gltf_scene.cpp  resources.cpp  shader.cpp  texture.cpp
